hello-risf/risf-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risf-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risf-nginx
  template:
    metadata:
      labels:
        app: risf-nginx
    spec:
      containers:
      - name: risf-nginx
        image: risf-nginx
        imagePullPolicy: Never       # Ne pas tirer l'image du web
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true         # Exécuter sans être root
        volumeMounts:                # Monter un répertoire temporaire
        - mountPath: /var/cache/nginx
          name: nginx-cache
      volumes:                       # Définir le volume temporaire
      - name: nginx-cache
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: risf-nginx-service
spec:
  selector:
    app: risf-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
