hello-risf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: risf-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - hello-risf.local.domain
    secretName: risf-tls
  rules:
  - host: hello-risf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: risf-nginx-service
            port:
              number: 80
